--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Clerk
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29tbXVuYWwtZmxlYS02MC5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_cYPYPo03BoUM2fOIrsEOp4wnEQhNR2nX6MLYJB7yjM
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 CLERK_WEBHOOK_SECRET=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
@@ -8,15 +8,15 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
 
 # Neon
-DATABASE_URL='postgresql://neondb_owner:npg_K5vmna1HTVhf@ep-rough-pine-ai0o5jgo-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL=
 
 # Pusher
-NEXT_PUBLIC_PUSHER_KEY="90b0b969aaa290a066b3"
-NEXT_PUBLIC_PUSHER_CLUSTER="us3"
-PUSHER_APP_ID="2121660"
-PUSHER_SECRET="ed0296a4c25a4f89b635"
+NEXT_PUBLIC_PUSHER_KEY=
+NEXT_PUBLIC_PUSHER_CLUSTER=
+PUSHER_APP_ID=
+PUSHER_SECRET=
 
 # Web Push (VAPID) — genera con: node -e "const wp=require('web-push');const k=wp.generateVAPIDKeys();console.log(JSON.stringify(k))"
-NEXT_PUBLIC_VAPID_PUBLIC_KEY="BOhTe6GSrp9vuBZOzxzdXeUZ27GI5RB_s2OeFlTLWwxX56HSL2mWaV5J3X6NmrP8nN7lagipj3_-_oq9k8QJ90E"
-VAPID_PRIVATE_KEY="u882yNldSqbV8owYDM7aGp3oNqGMLwi3Dph5TPG7ZHc"
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
 
