--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^19.0.0",
