api openia comentarios insert agent

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ VAPID_PRIVATE_KEY=
 # Uploadthing — obtén en: https://uploadthing.com/dashboard → App → API Keys
 UPLOADTHING_TOKEN=
 
+# OpenAI — para respuestas de agentes IA en comentarios de tareas
+OPENAI_API_KEY=
+
