--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.469.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
+    "openai": "^6.25.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^19.0.0",
