--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ UPLOADTHING_TOKEN=
 # OpenAI — para respuestas de agentes IA en comentarios de tareas
 OPENAI_API_KEY=
 
+# Anthropic — para agentes configurados con modelos Claude
+ANTHROPIC_API_KEY=
+
